update Profile pic for 2018

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="Hello! I'm Riajul Islam - Professional Applications Developer"/>
-	<meta property="og:image" content="https://iamriajul.github.io/images/riajul-squre.png"/>
+	<meta property="og:image" content="https://iamriajul.github.io/images/riajul-squre-2018.jpg"/>
 	<meta property="og:url" content="https://iamriajul.github.io/"/>
 	<meta property="og:site_name" content="Hello! I'm Riajul Islam - Professional Applications Developer"/>
 	<meta property="og:type" content="profile"/>
 	<meta property="og:description" content="Hello there! I'm Riajul Islam & I'm a full-stack Web & Software Developer."/>
 	<meta name="twitter:title" content="Hello! I'm Riajul Islam - Professional Applications Developer" />
-	<meta name="twitter:image" content="https://iamriajul.github.io/images/riajul-squre.png" />
+	<meta name="twitter:image" content="https://iamriajul.github.io/images/riajul-squre-2018.jpg" />
 	<meta name="twitter:url" content="https://iamriajul.github.io/" />
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
