update Profile pic for 2018

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/riajul.jpg);"></div>
+							<div class="profile-thumb" style="background: url(images/riajul-squre-2018.jpg);"></div>
 							<h1><span>Riajul Islam</span></h1>
 							<h3><span>Web, Desktop, Mobile Applications Developer</span></h3>
 							<p>
