silly! I forgot to add #contact-form ID into the Form! yea; now all should be fixed!

--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
 		</div>
 		<div class="choose animate-box">
 			<h2>Contact</h2>
-			<form action="https://formcarry.com/s/bjb_rl0vmtO" method="POST" accept-charset="UTF-8" >
+			<form id="contact-form" action="https://formcarry.com/s/bjb_rl0vmtO" method="POST" accept-charset="UTF-8" >
 			<div class="row form-group">
 					<div class="col-md-6">
 						<input type="text" name="First_Name" id="fname" class="form-control" placeholder="Your firstname">
@@ -715,54 +715,6 @@
 	
 	<!-- Main -->
 	<script src="js/main.js"></script>
-
-    <script>
-        // Contact-Form at bottom of the page
-        $(function(){
-            $("#contact-form").submit(function(e){
-                e.preventDefault();
-                var href = $(this).attr("action");
-
-                var success = $('#contact-form #success');
-                var error   = $('#contact-form #error');
-                var sending = $('#contact-form #img-sending');
-
-                success.css('display', 'none');
-                error.css('display', 'none');
-                sending.css('display', 'block');
-
-                $.ajax({
-                    type: "POST",
-                    dataType: "json",
-                    url: href,
-                    data: $(this).serialize(),
-                    success: function(response){
-                        if(response.status == "success"){
-                            alert("We received your submission, thank you!");
-                            sending.css('display', 'none');
-                            console.log(data);
-                            // Show message when site need to verified in order use Formspree functionality.
-                            if (data.success == 'confirmation email sent'){
-                                success.css('display', 'none');
-                                error.html('<strong>Error!</strong> This site is not verified to use this Form.');
-                                error.css('display', 'block');
-                                return;
-                            }
-                            // Otherwise show success message
-                            success.css('display', 'block');
-                            error.css('display', 'none');
-                        }else{
-                            alert("An error occured: " + response.message);
-                            sending.css('display', 'none');
-                            success.css('display', 'none');
-                            error.css('display', 'block');
-                        }
-                    }
-                });
-            });
-        });
-    </script>
-
 	</body>
 </html>
 
