--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline">
 						<li class="timeline-heading text-center animate-box">
+							<p><strong>*** A bit outdated, TODO: need to add new experiences got from 2018 to now.</strong></p>
 							<div><h3>Work Experience</h3></div>
 						</li>
 						<li class="animate-box timeline-unverted">
