--- a/index.html
+++ b/index.html
@@ -361,16 +361,16 @@
 				</div>
 
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="50"><span><strong>jQuery</strong>50%</span></div>
+					<div class="chart" data-percent="95"><span><strong>Node.js</strong>95%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="80"><span><strong>Angular</strong>80%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="75"><span><strong>Javascript</strong>75%</span></div>
+					<div class="chart" data-percent="90"><span><strong>Vue.js</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>Typescript</strong>90%</span></div>
+					<div class="chart" data-percent="95"><span><strong>Javascript</strong>95%</span></div>
 				</div>
 
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
@@ -385,6 +385,20 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="40"><span><strong>C#</strong>40%</span></div>
 				</div>
+
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="97"><span><strong>Laravel</strong>97%</span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="30"><span><strong>Django</strong>30%</span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="50"><span><strong>Dart</strong>50%</span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="75"><span><strong>Flutter</strong>75%</span></div>
+				</div>
+
 			</div>
 			<div class="row">
 				<div class="col-md-6">
@@ -397,7 +411,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">WordPress</span><span class="value-right">98%</span></h3>
+						<h3><span class="name-left">WordPress/WooCommerce</span><span class="value-right">98%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-2 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="98" aria-valuemin="0" aria-valuemax="100" style="width:98%">
@@ -405,15 +419,15 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">WooCommerce(E-Commerce with Wordpress)</span><span class="value-right">90%</span></h3>
+						<h3><span class="name-left">Laravel</span><span class="value-right">97%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+						  aria-valuenow="97" aria-valuemin="0" aria-valuemax="100" style="width:97%">
 						  </div>
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Web Development</span><span class="value-right">99%</span></h3>
+						<h3><span class="name-left">Web Application Development</span><span class="value-right">99%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="99" aria-valuemin="0" aria-valuemax="100" style="width:99%">
@@ -423,10 +437,10 @@
 				</div>
 				<div class="col-md-6">
 					<div class="progress-wrap">
-						<h3><span class="name-left">Web Design</span><span class="value-right">60%</span></h3>
+						<h3><span class="name-left">Flutter</span><span class="value-right">75%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-5 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
+						  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
 						  </div>
 						</div>
 					</div>
@@ -447,7 +461,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Android Application Development</span><span class="value-right">90%</span></h3>
+						<h3><span class="name-left">Mobile Application Development</span><span class="value-right">90%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
