--- a/index.html
+++ b/index.html
@@ -506,10 +506,10 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="https://play.google.com/store/apps/details?id=io.github.iamriajul.hashirbaksho" target="_blank" class="work" style="background-image: url(images/work/hashir_baksho_promo.jpg);">
+					<a href="https://play.google.com/store/apps/details?id=org.dailyislam.android" target="_blank" class="work" style="background-image: url(images/work/dailyislam-logo.png);">
 						<div class="desc" style="background: #ffffffbd;">
-							<h3>হাসির বাকসো/Hashir Baksho Android App</h3>
-							<span><img src="images/google-play.png" alt="হাসির বাকসো/Hashir Baksho on PlayStore"></span>
+							<h3>Daily Islam Android App<br><small>Applications Developer at dailyislam.org</small></h3>
+							<span><img src="images/google-play.png" alt="Daily Islam on PlayStore"></span>
 						</div>
 					</a>
 				</div>
@@ -541,7 +541,7 @@
                     <a href="https://play.google.com/store/apps/details?id=com.apsbiman.bimanhajjflights" target="_blank" class="work" style="background-image: url(images/work/biman_promo.jpg);">
                         <div class="desc" style="background: #ffffffbd;">
                             <h3>Biman Hajj Flight Android App<br><small>Lead Developer at Excellent Soft</small></h3>
-							<span><img src="images/google-play.png" alt="1000 Sunnah on PlayStore"></span>
+							<span><img src="images/google-play.png" alt="Biman Hajj Flight on PlayStore"></span>
                         </div>
                     </a>
                 </div>
