updated about me details.

--- a/index.html
+++ b/index.html
@@ -105,26 +105,43 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">KM. Riajul Islam</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Riajul Islam</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+880 1782 320 460</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">kmriajulislami@gmail.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">iamriajul.github.io</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">riajul.dev</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">33 Rail Bazar Road, Jagati, Kushtia, Dhaka, Bangladesh - 7002</span></li>
 						<li><span class="first-block">Languages:</span><span class="second-block">Bengali, Arabic, English, Hindi and Urdu</span></li>
-						<li><span class="first-block">Programming Languages:</span><span class="second-block">HTML, CSS, SASS, PHP, Javascript, Typescript, Java, Python, C#</span></li>
+						<li><span class="first-block">Programming Languages:</span><span class="second-block">PHP, Java, Kotlin, Javascript, Dart, Python, HTML, CSS and I can adopt any new one easily.</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
 					<h2>Hello Dear!</h2>
-					<p>I'm Riajul Islam, I am a Full-stack Web & Software Developer and I am carrying this experience for about more than 3 years.</p>
-					<p>Currently, I'm a student & doing part-time as a freelancer Web & Software developer. I was started my programming in 2015, now I am a full-stack Web & Software Developer with Super Learning Skill.<br>
-						My career was started as a Web Developer since then i am doing freelancing and besides learning new technologies & diving into Software development etc. especially nowadays interested in Android Application Development and doing so.<br>
-						I did work as a Company's Head Web Developer. and I have also developed an Android Application as the volunteer.<br>
-						if I talk about my hobbies that's are nothing other than learning new things & technologies and fishing!, nowadays i'm not very interested in fishing but i would like to have in feature.<br>
-						Day by day I'm constantly increasing & enhancing my Skills.<br>
-						Oh! one thing i missed that I also like to learn new Spoken language(Human-Language) currently, i know Bengali, Arabic, English, Hindi and Urdu.<br>
-						in My academics subject, i am very interested in Science especially I love Biology subject. <br>in my Family we are only three My Mother, Father and Me <i class="icon-happy2"></i><br><br>
-						Thank you.</p>
+					<p>
+						I have been a very successful web & mobile developer for over 5 years, working for individuals and companies in Bangladesh mostly.
+						<br>
+						There was struggle when I started, but that didn't last very long, Alhamdulillah.
+						<br>
+						I have learned a lot from workplaces, I have never stopped learning.
+					</p>
+					<p>
+						Since I have started Web and Android app development, I have been spending every spare minute writing code for the Web & Mobile, and learning everything on mobile application development. I have also adapted cross-platform Mobile Application Development with Flutter and also Successfully Completed a Government Application Development for iOS and Android using Flutter, Laravel and Amazon Web Services. I have a primary Job in an IT Farm where I develop a wide range of Applications day-to-day basis like POS, Employee Tracking System, Flight Management System, Radar Flight Scanning, Applications for Biman Bangladesh Airlines's Users and System Administration mostly develop Applications for Biman Bangladesh Airlines and Hazrat Shahjalal International Airport.  Additionally to development of new apps, a lot of the work I do is on-going maintenance of existing popular apps.
+					</p>
+					<p>
+						I always aim to maintain a long term relationship with my clients.
+					</p>
+					<p>
+						Let's talk about my personal life a little,<br>
+						My hobbies are learning new technologies and fishing!.<br>
+						I love learning new spoken-languages.<br>
+						I believe more in knowledge and experiences than certificates.<br>
+						I hate lies very very much.<br>
+						I love to have logical discussions.<br>
+						My family is My Mother, Father and Me <i class="icon-happy2"></i><br>
+						Thanks for reading!
+					</p>
+					<p>
+						You're welcomed if you wanna have a logical discussions with me.
+					</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://fb.com/iamriajul" target="_blank"><i class="icon-facebook3"></i></a></li>
