Add Statistics from Wakatime for Programming Languages

--- a/index.html
+++ b/index.html
@@ -485,6 +485,16 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Live Statistics</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<figure><embed src="https://wakatime.com/share/@iamriajul/a9103021-dbea-4e95-82a7-061da73ac140.svg"></embed></figure>
+				</div>
+			</div>
 		</div>
 	</div>
 
