feat: added Google Docs Resume Link.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -60,10 +60,10 @@
 
     </head>
 	<body>
-		
+
 	<div class="fh5co-loader"></div>
-	
-	<div id="page">	
+
+	<div id="page">
 	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
@@ -165,7 +165,12 @@
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline">
 						<li class="timeline-heading text-center animate-box">
-							<p><strong>*** A bit outdated, TODO: need to add new experiences got from 2018 to now.</strong></p>
+							<p>
+								<strong>
+									*** A bit outdated, TODO: need to add new experiences got from 2018 to now. Updated:
+								<a href="https://docs.google.com/document/d/1RAX-tVRd1SCkQC31KZvEbm8HsFZLn0jps0eBVLSG_6Q" target="_blank">Google Docs</a>
+								</strong>
+							</p>
 							<div><h3>Work Experience</h3></div>
 						</li>
 						<li class="animate-box timeline-unverted">
@@ -262,7 +267,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 
 	<div id="fh5co-features" class="animate-box">
 		<div class="container">
@@ -656,7 +661,7 @@
 			<!--</div>-->
 		<!--</div>-->
 	<!--</div>-->
-	
+
 	<div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
 		<div class="container">
@@ -723,7 +728,7 @@
 
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d116689.98638321518!2d89.03849220383552!3d23.909298343895948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjPCsDUzJzM3LjEiTiA4OcKwMDUnNTkuMyJF!5e0!3m2!1sen!2sus!4v1511156780942" width="800" height="600" frameborder="0" style="overflow: hidden;border:0;height: 500px;width: 100%;" allowfullscreen></iframe>
 	</div>
-	
+
 	<div id="fh5co-footer">
 		<div class="container">
 			<div class="row">
@@ -737,7 +742,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -753,7 +758,7 @@
 	<!-- Google Map -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
 	<!--<script src="js/google_map.js"></script>-->
-	
+
 	<!-- Main -->
 	<script src="js/main.js"></script>
 	</body>
