fix: dailyislam app playstore link.

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="https://play.google.com/store/apps/details?id=org.dailyislam.android" target="_blank" class="work" style="background-image: url(images/work/dailyislam-logo.png);">
+					<a href="https://play.google.com/store/apps/details?id=org.dailyislam.android.preview" target="_blank" class="work" style="background-image: url(images/work/dailyislam-logo.png);">
 						<div class="desc" style="background: #ffffffbd;">
 							<h3>Daily Islam Android App<br><small>Applications Developer at dailyislam.org</small></h3>
 							<span><img src="images/google-play.png" alt="Daily Islam on PlayStore"></span>
